--- a/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSummaryItem.yml
@@ -3,10 +3,10 @@ items:
 - uid: CRMScript.NetServer.NSChatSummaryItem
   commentId: T:CRMScript.NetServer.NSChatSummaryItem
   id: NSChatSummaryItem
-  so.intellisense: Void.NSChatSummaryItem
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSChatSummaryItem.#ctor
   - CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
   - CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
   - CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
@@ -14,153 +14,19 @@ items:
   - CRMScript.NetServer.NSChatSummaryItem.GetName()
   - CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
   - CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
-  - CRMScript.NetServer.NSChatSummaryItem.#ctor
   - CRMScript.NetServer.NSChatSummaryItem.SetChatSessionId(Integer)
   - CRMScript.NetServer.NSChatSummaryItem.SetCompanyName(String)
   - CRMScript.NetServer.NSChatSummaryItem.SetFirstMessage(String)
   - CRMScript.NetServer.NSChatSummaryItem.SetLastMessage(String)
   - CRMScript.NetServer.NSChatSummaryItem.SetName(String)
-  - CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded()
-  - CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested()
+  - CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded(DateTime)
+  - CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested(DateTime)
   name: NSChatSummaryItem
   nameWithType: NSChatSummaryItem
   fullName: CRMScript.NetServer.NSChatSummaryItem
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
-  id: 'GetChatSessionId()'
-  so.intellisense: NSChatSummaryItem.GetChatSessionId
-  langs:
-  - crmscript
-  name: 'GetChatSessionId()'
-  nameWithType: NSChatSummaryItem.GetChatSessionId()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatSummaryItem thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetChatSessionId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
-  id: 'GetCompanyName()'
-  so.intellisense: NSChatSummaryItem.GetCompanyName
-  langs:
-  - crmscript
-  name: 'GetCompanyName()'
-  nameWithType: NSChatSummaryItem.GetCompanyName()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
-  type: Method
-  summary: "\nThe name of the customers company, if provided<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSChatSummaryItem thing;\nString companyName = thing.GetCompanyName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetCompanyName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nString companyName = thing.GetCompanyName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
-  id: 'GetFirstMessage()'
-  so.intellisense: NSChatSummaryItem.GetFirstMessage
-  langs:
-  - crmscript
-  name: 'GetFirstMessage()'
-  nameWithType: NSChatSummaryItem.GetFirstMessage()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
-  type: Method
-  summary: "\nA copy of the first message in the chat session<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSChatSummaryItem thing;\nString firstMessage = thing.GetFirstMessage();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetFirstMessage()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nString firstMessage = thing.GetFirstMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
-  id: 'GetLastMessage()'
-  so.intellisense: NSChatSummaryItem.GetLastMessage
-  langs:
-  - crmscript
-  name: 'GetLastMessage()'
-  nameWithType: NSChatSummaryItem.GetLastMessage()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
-  type: Method
-  summary: "\nA copy of the last message in the chat session<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSChatSummaryItem thing;\nString lastMessage = thing.GetLastMessage();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetLastMessage()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nString lastMessage = thing.GetLastMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetName()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetName()
-  id: 'GetName()'
-  so.intellisense: NSChatSummaryItem.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSChatSummaryItem.GetName()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetName()
-  type: Method
-  summary: "\nThe name of customer, if provided<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSChatSummaryItem thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
-  id: 'GetWhenEnded()'
-  so.intellisense: NSChatSummaryItem.GetWhenEnded
-  langs:
-  - crmscript
-  name: 'GetWhenEnded()'
-  nameWithType: NSChatSummaryItem.GetWhenEnded()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
-  type: Method
-  summary: "\nWhen the session was ended.<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSChatSummaryItem thing;\nDateTime whenEnded = thing.GetWhenEnded();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetWhenEnded()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenEnded = thing.GetWhenEnded();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
-  id: 'GetWhenRequested()'
-  so.intellisense: NSChatSummaryItem.GetWhenRequested
-  langs:
-  - crmscript
-  name: 'GetWhenRequested()'
-  nameWithType: NSChatSummaryItem.GetWhenRequested()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
-  type: Method
-  summary: "\nWhen the session was requested by the customer.<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSChatSummaryItem thing;\nDateTime whenRequested = thing.GetWhenRequested();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetWhenRequested()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenRequested = thing.GetWhenRequested();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSChatSummaryItem.#ctor
   id: '#ctor'
@@ -176,6 +42,146 @@ items:
   syntax: 
     content: NSChatSummaryItem
   example: 
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
+  id: 'GetChatSessionId()'
+  so.intellisense: NSChatSummaryItem.GetChatSessionId
+  langs:
+  - crmscript
+  name: 'GetChatSessionId()'
+  nameWithType: NSChatSummaryItem.GetChatSessionId()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetChatSessionId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetChatSessionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
+  id: 'GetCompanyName()'
+  so.intellisense: NSChatSummaryItem.GetCompanyName
+  langs:
+  - crmscript
+  name: 'GetCompanyName()'
+  nameWithType: NSChatSummaryItem.GetCompanyName()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetCompanyName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetCompanyName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the customers company, if provided
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nString companyName = thing.GetCompanyName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
+  id: 'GetFirstMessage()'
+  so.intellisense: NSChatSummaryItem.GetFirstMessage
+  langs:
+  - crmscript
+  name: 'GetFirstMessage()'
+  nameWithType: NSChatSummaryItem.GetFirstMessage()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetFirstMessage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetFirstMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A copy of the first message in the chat session
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nString firstMessage = thing.GetFirstMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
+  id: 'GetLastMessage()'
+  so.intellisense: NSChatSummaryItem.GetLastMessage
+  langs:
+  - crmscript
+  name: 'GetLastMessage()'
+  nameWithType: NSChatSummaryItem.GetLastMessage()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetLastMessage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLastMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: A copy of the last message in the chat session
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nString lastMessage = thing.GetLastMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetName()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetName()
+  id: 'GetName()'
+  so.intellisense: NSChatSummaryItem.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSChatSummaryItem.GetName()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of customer, if provided
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
+  id: 'GetWhenEnded()'
+  so.intellisense: NSChatSummaryItem.GetWhenEnded
+  langs:
+  - crmscript
+  name: 'GetWhenEnded()'
+  nameWithType: NSChatSummaryItem.GetWhenEnded()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenEnded()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: DateTime GetWhenEnded()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: When the session was ended.
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenEnded = thing.GetWhenEnded();</code></pre>\n"
+- uid: CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
+  id: 'GetWhenRequested()'
+  so.intellisense: NSChatSummaryItem.GetWhenRequested
+  langs:
+  - crmscript
+  name: 'GetWhenRequested()'
+  nameWithType: NSChatSummaryItem.GetWhenRequested()
+  fullName: CRMScript.NetServer.NSChatSummaryItem.GetWhenRequested()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: DateTime GetWhenRequested()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: When the session was requested by the customer.
+  example: 
+  - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenRequested = thing.GetWhenRequested();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.SetChatSessionId(Integer)
   commentId: M:CRMScript.NetServer.NSChatSummaryItem.SetChatSessionId(Integer)
   id: 'SetChatSessionId(Integer)'
@@ -186,14 +192,16 @@ items:
   nameWithType: NSChatSummaryItem.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetChatSessionId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetChatSessionId(Integer chatSessionId)
+    content: Void SetChatSessionId(Integer chatSessionId)
     parameters:
     - id: chatSessionId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key (auto-incremented)
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nInteger chatSessionId;\nthing.SetChatSessionId(chatSessionId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.SetCompanyName(String)
@@ -206,14 +214,16 @@ items:
   nameWithType: NSChatSummaryItem.SetCompanyName(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetCompanyName(String)
   type: Method
-  summary: "\nThe name of the customers company, if provided\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCompanyName(String companyName)
+    content: Void SetCompanyName(String companyName)
     parameters:
     - id: companyName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the customers company, if provided
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nString companyName;\nthing.SetCompanyName(companyName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.SetFirstMessage(String)
@@ -226,14 +236,16 @@ items:
   nameWithType: NSChatSummaryItem.SetFirstMessage(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetFirstMessage(String)
   type: Method
-  summary: "\nA copy of the first message in the chat session\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetFirstMessage(String firstMessage)
+    content: Void SetFirstMessage(String firstMessage)
     parameters:
     - id: firstMessage
       type: CRMScript.Global.String
-      description: 
+      description: A copy of the first message in the chat session
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nString firstMessage;\nthing.SetFirstMessage(firstMessage);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.SetLastMessage(String)
@@ -246,14 +258,16 @@ items:
   nameWithType: NSChatSummaryItem.SetLastMessage(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetLastMessage(String)
   type: Method
-  summary: "\nA copy of the last message in the chat session\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetLastMessage(String lastMessage)
+    content: Void SetLastMessage(String lastMessage)
     parameters:
     - id: lastMessage
       type: CRMScript.Global.String
-      description: 
+      description: A copy of the last message in the chat session
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nString lastMessage;\nthing.SetLastMessage(lastMessage);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSummaryItem.SetName(String)
@@ -266,48 +280,60 @@ items:
   nameWithType: NSChatSummaryItem.SetName(String)
   fullName: CRMScript.NetServer.NSChatSummaryItem.SetName(String)
   type: Method
-  summary: "\nThe name of customer, if provided\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of customer, if provided
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded()
-  id: 'SetWhenEnded()'
+- uid: CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded(DateTime)
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded(DateTime)
+  id: 'SetWhenEnded(DateTime)'
   so.intellisense: NSChatSummaryItem.SetWhenEnded
   langs:
   - crmscript
-  name: 'SetWhenEnded()'
-  nameWithType: NSChatSummaryItem.SetWhenEnded()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded()
+  name: 'SetWhenEnded(DateTime)'
+  nameWithType: NSChatSummaryItem.SetWhenEnded(DateTime)
+  fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenEnded(DateTime)
   type: Method
-  summary: "\nWhen the session was ended.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetWhenEnded(DateTime whenEnded)
+    content: Void SetWhenEnded(DateTime whenEnded)
     parameters:
+    - id: whenEnded
+      type: CRMScript.Global.DateTime
+      description: When the session was ended.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenEnded;\nthing.SetWhenEnded(whenEnded);</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested()
-  commentId: M:CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested()
-  id: 'SetWhenRequested()'
+- uid: CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested(DateTime)
+  commentId: M:CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested(DateTime)
+  id: 'SetWhenRequested(DateTime)'
   so.intellisense: NSChatSummaryItem.SetWhenRequested
   langs:
   - crmscript
-  name: 'SetWhenRequested()'
-  nameWithType: NSChatSummaryItem.SetWhenRequested()
-  fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested()
+  name: 'SetWhenRequested(DateTime)'
+  nameWithType: NSChatSummaryItem.SetWhenRequested(DateTime)
+  fullName: CRMScript.NetServer.NSChatSummaryItem.SetWhenRequested(DateTime)
   type: Method
-  summary: "\nWhen the session was requested by the customer.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetWhenRequested(DateTime whenRequested)
+    content: Void SetWhenRequested(DateTime whenRequested)
     parameters:
+    - id: whenRequested
+      type: CRMScript.Global.DateTime
+      description: When the session was requested by the customer.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSummaryItem thing;\nDateTime whenRequested;\nthing.SetWhenRequested(whenRequested);</code></pre>\n"
 references:
@@ -335,3 +361,9 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
