--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -489,7 +489,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetFlags()
   type: Method
   summary: "\nA bitmask representing flags for this category.\n"
-  remarks: "\n<p>See enum flags.</p>\n"
+  remarks: "\n<p>See enum</p>\n"
   syntax: 
     content: SetFlags(TicketCategoryFlags flags)
     parameters:
@@ -666,3 +666,9 @@ references:
   name: TicketCategoryFlags
   nameWithType: TicketCategoryFlags
   fullName: CRMScript.Native.TicketCategoryFlags
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
+  isExternal: true
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
