--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -30,7 +30,9 @@ items:
   - CRMScript.NetServer.changedOwner
   - CRMScript.NetServer.ChatMessageType
   - CRMScript.NetServer.ChatMessageSpecialType
+  - CRMScript.NetServer.ChatSessionFlags
   - CRMScript.NetServer.ChatSessionStatus
+  - CRMScript.NetServer.ChatWidgetSize
   - CRMScript.NetServer.checkEscalating
   - CRMScript.NetServer.Checkoutstate
   - CRMScript.NetServer.children
@@ -62,7 +64,6 @@ items:
   - CRMScript.NetServer.fieldKeys
   - CRMScript.NetServer.fieldLineNo
   - CRMScript.NetServer.fieldType
-  - CRMScript.NetServer.flags
   - CRMScript.NetServer.freeTextOperator
   - CRMScript.NetServer.generatorEncoding
   - CRMScript.NetServer.invitationDocType
@@ -559,7 +560,6 @@ items:
   - CRMScript.NetServer.NSWebhookResult
   - CRMScript.NetServer.NSWebPanelEntity
   - CRMScript.NetServer.NSWebPanelEntityList
-  - CRMScript.NetServer.NSWidgetRequiredFields
   - CRMScript.NetServer.NSWindowPosSize
   - CRMScript.NetServer.NSWindowPosSizeList
   - CRMScript.NetServer.NSAAAMockAgent
@@ -600,7 +600,6 @@ items:
   - CRMScript.NetServer.serverType
   - CRMScript.NetServer.showState
   - CRMScript.NetServer.singleWordOperator
-  - CRMScript.NetServer.size
   - CRMScript.NetServer.slevel
   - CRMScript.NetServer.source
   - CRMScript.NetServer.sourceType
@@ -610,7 +609,6 @@ items:
   - CRMScript.NetServer.sysMaxLevel
   - CRMScript.NetServer.tableRights
   - CRMScript.NetServer.TaskType
-  - CRMScript.NetServer.theme
   - CRMScript.NetServer.ticketChangedPriority
   - CRMScript.NetServer.ticketClosed
   - CRMScript.NetServer.ticketNew
@@ -624,6 +622,8 @@ items:
   - CRMScript.NetServer.valueType
   - CRMScript.NetServer.visibility
   - CRMScript.NetServer.visibleIn
+  - CRMScript.NetServer.WidgetRequiredFields
+  - CRMScript.NetServer.WidgetTheme
   name: CRMScript.NetServer
   nameWithType: CRMScript.NetServer
   fullName: CRMScript.NetServer
@@ -1055,12 +1055,12 @@ references:
   name: NSChatSessionEntity
   nameWithType: NSChatSessionEntity
   fullName: CRMScript.NetServer.NSChatSessionEntity
-- uid: CRMScript.NetServer.flags
-  commentId: T:CRMScript.NetServer.flags
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
   isExternal: true
-  name: flags
-  nameWithType: flags
-  fullName: CRMScript.NetServer.flags
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
 - uid: CRMScript.NetServer.ChatSessionStatus
   commentId: T:CRMScript.NetServer.ChatSessionStatus
   isExternal: true
@@ -1091,24 +1091,24 @@ references:
   name: NSChatWidgetSettings
   nameWithType: NSChatWidgetSettings
   fullName: CRMScript.NetServer.NSChatWidgetSettings
-- uid: CRMScript.NetServer.NSWidgetRequiredFields
-  commentId: T:CRMScript.NetServer.NSWidgetRequiredFields
+- uid: CRMScript.NetServer.WidgetRequiredFields
+  commentId: T:CRMScript.NetServer.WidgetRequiredFields
   isExternal: true
-  name: NSWidgetRequiredFields
-  nameWithType: NSWidgetRequiredFields
-  fullName: CRMScript.NetServer.NSWidgetRequiredFields
-- uid: CRMScript.NetServer.size
-  commentId: T:CRMScript.NetServer.size
+  name: WidgetRequiredFields
+  nameWithType: WidgetRequiredFields
+  fullName: CRMScript.NetServer.WidgetRequiredFields
+- uid: CRMScript.NetServer.ChatWidgetSize
+  commentId: T:CRMScript.NetServer.ChatWidgetSize
   isExternal: true
-  name: size
-  nameWithType: size
-  fullName: CRMScript.NetServer.size
-- uid: CRMScript.NetServer.theme
-  commentId: T:CRMScript.NetServer.theme
+  name: ChatWidgetSize
+  nameWithType: ChatWidgetSize
+  fullName: CRMScript.NetServer.ChatWidgetSize
+- uid: CRMScript.NetServer.WidgetTheme
+  commentId: T:CRMScript.NetServer.WidgetTheme
   isExternal: true
-  name: theme
-  nameWithType: theme
-  fullName: CRMScript.NetServer.theme
+  name: WidgetTheme
+  nameWithType: WidgetTheme
+  fullName: CRMScript.NetServer.WidgetTheme
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult
   commentId: T:CRMScript.NetServer.NSCheckLicenseStatusResult
   isExternal: true
