--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1156,8 +1156,12 @@ items:
       href: CRMScript.NetServer.calReplyStatus.yml
     - name: Enum changedOwner
       href: CRMScript.NetServer.changedOwner.yml
+    - name: ChatSessionFlags
+      href: CRMScript.NetServer.ChatSessionFlags.yml
     - name: Enum ChatSessionStatus
       href: CRMScript.NetServer.ChatSessionStatus.yml
+    - name: ChatWidgetSize
+      href: CRMScript.NetServer.ChatWidgetSize.yml
     - name: Enum checkEscalating
       href: CRMScript.NetServer.checkEscalating.yml
     - name: Enum Checkoutstate
@@ -1218,8 +1222,6 @@ items:
       href: CRMScript.NetServer.fieldLineNo.yml
     - name: Enum fieldType
       href: CRMScript.NetServer.fieldType.yml
-    - name: Enum flags
-      href: CRMScript.NetServer.flags.yml
     - name: Enum freeTextOperator
       href: CRMScript.NetServer.freeTextOperator.yml
     - name: Enum generatorEncoding
@@ -1254,8 +1256,6 @@ items:
       href: CRMScript.NetServer.multiWordOperator.yml
     - name: Enum name
       href: CRMScript.NetServer.name.yml
-    - name: Enum NSWidgetRequiredFields
-      href: CRMScript.NetServer.NSWidgetRequiredFields.yml
     - name: Enum operation
       href: CRMScript.NetServer.operation.yml
     - name: OrderBySortType
@@ -1330,8 +1330,6 @@ items:
       href: CRMScript.NetServer.showState.yml
     - name: Enum singleWordOperator
       href: CRMScript.NetServer.singleWordOperator.yml
-    - name: Enum size
-      href: CRMScript.NetServer.size.yml
     - name: Enum slevel
       href: CRMScript.NetServer.slevel.yml
     - name: Enum source
@@ -1350,8 +1348,6 @@ items:
       href: CRMScript.NetServer.tableRights.yml
     - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
-    - name: Enum theme
-      href: CRMScript.NetServer.theme.yml
     - name: Enum ticketChangedPriority
       href: CRMScript.NetServer.ticketChangedPriority.yml
     - name: Enum ticketClosed
@@ -1378,5 +1374,9 @@ items:
       href: CRMScript.NetServer.visibility.yml
     - name: Enum visibleIn
       href: CRMScript.NetServer.visibleIn.yml
+    - name: WidgetRequiredFields
+      href: CRMScript.NetServer.WidgetRequiredFields.yml
+    - name: WidgetTheme
+      href: CRMScript.NetServer.WidgetTheme.yml
 - name: Trigger scripts
   href: CRMScript.Event.Trigger.yml
