--- a/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatSession.yml
@@ -3,12 +3,11 @@ items:
 - uid: CRMScript.NetServer.NSChatSession
   commentId: T:CRMScript.NetServer.NSChatSession
   id: NSChatSession
-  so.intellisense: Void.NSChatSession
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSChatSession.GetChatSessionId()
   - CRMScript.NetServer.NSChatSession.#ctor
+  - CRMScript.NetServer.NSChatSession.GetChatSessionId()
   - CRMScript.NetServer.NSChatSession.SetChatSessionId(Integer)
   name: NSChatSession
   nameWithType: NSChatSession
@@ -16,25 +15,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSChatSession.GetChatSessionId()
-  commentId: M:CRMScript.NetServer.NSChatSession.GetChatSessionId()
-  id: 'GetChatSessionId()'
-  so.intellisense: NSChatSession.GetChatSessionId
-  langs:
-  - crmscript
-  name: 'GetChatSessionId()'
-  nameWithType: NSChatSession.GetChatSessionId()
-  fullName: CRMScript.NetServer.NSChatSession.GetChatSessionId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatSession thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetChatSessionId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSChatSession thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSession.#ctor
   commentId: M:CRMScript.NetServer.NSChatSession.#ctor
   id: '#ctor'
@@ -50,6 +30,26 @@ items:
   syntax: 
     content: NSChatSession
   example: 
+- uid: CRMScript.NetServer.NSChatSession.GetChatSessionId()
+  commentId: M:CRMScript.NetServer.NSChatSession.GetChatSessionId()
+  id: 'GetChatSessionId()'
+  so.intellisense: NSChatSession.GetChatSessionId
+  langs:
+  - crmscript
+  name: 'GetChatSessionId()'
+  nameWithType: NSChatSession.GetChatSessionId()
+  fullName: CRMScript.NetServer.NSChatSession.GetChatSessionId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetChatSessionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSChatSession thing;\nInteger chatSessionId = thing.GetChatSessionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatSession.SetChatSessionId(Integer)
   commentId: M:CRMScript.NetServer.NSChatSession.SetChatSessionId(Integer)
   id: 'SetChatSessionId(Integer)'
@@ -60,14 +60,16 @@ items:
   nameWithType: NSChatSession.SetChatSessionId(Integer)
   fullName: CRMScript.NetServer.NSChatSession.SetChatSessionId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetChatSessionId(Integer chatSessionId)
+    content: Void SetChatSessionId(Integer chatSessionId)
     parameters:
     - id: chatSessionId
       type: CRMScript.Global.Integer
-      description: 
+      description: The primary key (auto-incremented)
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatSession thing;\nInteger chatSessionId;\nthing.SetChatSessionId(chatSessionId);</code></pre>\n"
 references:
@@ -83,3 +85,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
