--- a/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatTopicAgent.yml
@@ -3,28 +3,42 @@ items:
 - uid: CRMScript.NetServer.NSChatTopicAgent
   commentId: T:CRMScript.NetServer.NSChatTopicAgent
   id: NSChatTopicAgent
-  so.intellisense: Void.NSChatTopicAgent
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSChatTopicAgent.#ctor
   - CRMScript.NetServer.NSChatTopicAgent.GetCanListen()
   - CRMScript.NetServer.NSChatTopicAgent.GetCanManage()
   - CRMScript.NetServer.NSChatTopicAgent.GetCanNotify()
   - CRMScript.NetServer.NSChatTopicAgent.GetCanRespond()
   - CRMScript.NetServer.NSChatTopicAgent.GetTopicId()
   - CRMScript.NetServer.NSChatTopicAgent.GetUser()
-  - CRMScript.NetServer.NSChatTopicAgent.#ctor
   - CRMScript.NetServer.NSChatTopicAgent.SetCanListen(Bool)
   - CRMScript.NetServer.NSChatTopicAgent.SetCanManage(Bool)
   - CRMScript.NetServer.NSChatTopicAgent.SetCanNotify(Bool)
   - CRMScript.NetServer.NSChatTopicAgent.SetCanRespond(Bool)
   - CRMScript.NetServer.NSChatTopicAgent.SetTopicId(Integer)
-  - CRMScript.NetServer.NSChatTopicAgent.SetUser()
+  - CRMScript.NetServer.NSChatTopicAgent.SetUser(NSAssociate)
   name: NSChatTopicAgent
   nameWithType: NSChatTopicAgent
   fullName: CRMScript.NetServer.NSChatTopicAgent
   type: Class
   summary: 
+  example: 
+- uid: CRMScript.NetServer.NSChatTopicAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSChatTopicAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSChatTopicAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSChatTopicAgent.#ctor
+  fullName: CRMScript.NetServer.NSChatTopicAgent.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSChatTopicAgent
   example: 
 - uid: CRMScript.NetServer.NSChatTopicAgent.GetCanListen()
   commentId: M:CRMScript.NetServer.NSChatTopicAgent.GetCanListen()
@@ -36,13 +50,14 @@ items:
   nameWithType: NSChatTopicAgent.GetCanListen()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanListen()
   type: Method
-  summary: "\nTrue of a user can listen in on this topic<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSChatTopicAgent thing;\nBool canListen = thing.GetCanListen();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetCanListen()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: True of a user can listen in on this topic
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canListen = thing.GetCanListen();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.GetCanManage()
@@ -55,13 +70,14 @@ items:
   nameWithType: NSChatTopicAgent.GetCanManage()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanManage()
   type: Method
-  summary: "\nTrue if the user is a manager for this topic<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSChatTopicAgent thing;\nBool canManage = thing.GetCanManage();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetCanManage()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: True if the user is a manager for this topic
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canManage = thing.GetCanManage();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.GetCanNotify()
@@ -74,13 +90,14 @@ items:
   nameWithType: NSChatTopicAgent.GetCanNotify()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetCanNotify()
   type: Method
-  summary: "\nTrue if the user should receive notifications for this topic<p></p>\n<strong>Returns:</strong>Bool<p></p>\n<pre><code>NSChatTopicAgent thing;\nBool canNotify = thing.GetCanNotify();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetCanNotify()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Bool
+      description: True if the user should receive notifications for this topic
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canNotify = thing.GetCanNotify();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.GetCanRespond()
@@ -97,7 +114,7 @@ items:
   remarks: 
   syntax: 
     content: Bool GetCanRespond()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Bool
   example: 
@@ -112,13 +129,14 @@ items:
   nameWithType: NSChatTopicAgent.GetTopicId()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetTopicId()
   type: Method
-  summary: "\nThe reference to the associated chat topic.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSChatTopicAgent thing;\nInteger topicId = thing.GetTopicId();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTopicId()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Integer
+      description: The reference to the associated chat topic.
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nInteger topicId = thing.GetTopicId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.GetUser()
@@ -131,30 +149,16 @@ items:
   nameWithType: NSChatTopicAgent.GetUser()
   fullName: CRMScript.NetServer.NSChatTopicAgent.GetUser()
   type: Method
-  summary: "\nThe associate that is the user agent.<p></p>\n<strong>Returns:</strong>NSAssociate<p></p>\n<pre><code>NSChatTopicAgent thing;\nNSAssociate user = thing.GetUser();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSAssociate GetUser()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.NetServer.NSAssociate
+      description: The associate that is the user agent.
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nNSAssociate user = thing.GetUser();</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatTopicAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSChatTopicAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSChatTopicAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSChatTopicAgent.#ctor
-  fullName: CRMScript.NetServer.NSChatTopicAgent.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSChatTopicAgent
-  example: 
 - uid: CRMScript.NetServer.NSChatTopicAgent.SetCanListen(Bool)
   commentId: M:CRMScript.NetServer.NSChatTopicAgent.SetCanListen(Bool)
   id: 'SetCanListen(Bool)'
@@ -165,14 +169,16 @@ items:
   nameWithType: NSChatTopicAgent.SetCanListen(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanListen(Bool)
   type: Method
-  summary: "\nTrue of a user can listen in on this topic\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCanListen(Bool canListen)
+    content: Void SetCanListen(Bool canListen)
     parameters:
     - id: canListen
       type: CRMScript.Global.Bool
-      description: 
+      description: True of a user can listen in on this topic
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canListen;\nthing.SetCanListen(canListen);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.SetCanManage(Bool)
@@ -185,14 +191,16 @@ items:
   nameWithType: NSChatTopicAgent.SetCanManage(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanManage(Bool)
   type: Method
-  summary: "\nTrue if the user is a manager for this topic\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCanManage(Bool canManage)
+    content: Void SetCanManage(Bool canManage)
     parameters:
     - id: canManage
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the user is a manager for this topic
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canManage;\nthing.SetCanManage(canManage);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.SetCanNotify(Bool)
@@ -205,14 +213,16 @@ items:
   nameWithType: NSChatTopicAgent.SetCanNotify(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanNotify(Bool)
   type: Method
-  summary: "\nTrue if the user should receive notifications for this topic\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCanNotify(Bool canNotify)
+    content: Void SetCanNotify(Bool canNotify)
     parameters:
     - id: canNotify
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the user should receive notifications for this topic
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canNotify;\nthing.SetCanNotify(canNotify);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.SetCanRespond(Bool)
@@ -225,14 +235,16 @@ items:
   nameWithType: NSChatTopicAgent.SetCanRespond(Bool)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetCanRespond(Bool)
   type: Method
-  summary: "\nTrue if the user can respond to chats in this topic\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetCanRespond(Bool canRespond)
+    content: Void SetCanRespond(Bool canRespond)
     parameters:
     - id: canRespond
       type: CRMScript.Global.Bool
-      description: 
+      description: True if the user can respond to chats in this topic
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nBool canRespond;\nthing.SetCanRespond(canRespond);</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatTopicAgent.SetTopicId(Integer)
@@ -245,31 +257,36 @@ items:
   nameWithType: NSChatTopicAgent.SetTopicId(Integer)
   fullName: CRMScript.NetServer.NSChatTopicAgent.SetTopicId(Integer)
   type: Method
-  summary: "\nThe reference to the associated chat topic.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetTopicId(Integer topicId)
+    content: Void SetTopicId(Integer topicId)
     parameters:
     - id: topicId
       type: CRMScript.Global.Integer
-      description: 
+      description: The reference to the associated chat topic.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nInteger topicId;\nthing.SetTopicId(topicId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSChatTopicAgent.SetUser()
-  commentId: M:CRMScript.NetServer.NSChatTopicAgent.SetUser()
-  id: 'SetUser()'
+- uid: CRMScript.NetServer.NSChatTopicAgent.SetUser(NSAssociate)
+  commentId: M:CRMScript.NetServer.NSChatTopicAgent.SetUser(NSAssociate)
+  id: 'SetUser(NSAssociate)'
   so.intellisense: NSChatTopicAgent.SetUser
   langs:
   - crmscript
-  name: 'SetUser()'
-  nameWithType: NSChatTopicAgent.SetUser()
-  fullName: CRMScript.NetServer.NSChatTopicAgent.SetUser()
+  name: 'SetUser(NSAssociate)'
+  nameWithType: NSChatTopicAgent.SetUser(NSAssociate)
+  fullName: CRMScript.NetServer.NSChatTopicAgent.SetUser(NSAssociate)
   type: Method
-  summary: "\nThe associate that is the user agent.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetUser(NSAssociate user)
+    content: Void SetUser(NSAssociate user)
     parameters:
+    - id: user 
+      type: CRMScript.NetServer.NSAssociate
+      description: The associate that is the user agent.
   example: 
   - "\n<pre><code>NSChatTopicAgent thing;\nNSAssociate user;\nthing.SetUser(user);</code></pre>\n"
 references:
@@ -297,3 +314,9 @@ references:
   name: NSAssociate
   nameWithType: NSAssociate
   fullName: CRMScript.NetServer.NSAssociate
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
