--- a/docs/api-reference/CRMScript.NetServer.NSEMailEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailEntity.yml
@@ -751,7 +751,7 @@ items:
   fullName: CRMScript.NetServer.NSEMailEntity.SetFlags(Integer)
   type: Method
   summary: "\nFlag status of this mail (unread, replied, deleted )\n"
-  remarks: "\n<p>See enum flags.</p>\n"
+  remarks: "\n<p>See enum</p>\n"
   syntax: 
     content: SetFlags(Integer flags)
     parameters:
@@ -1171,3 +1171,9 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
+  isExternal: true
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
