--- a/docs/api-reference/CRMScript.NetServer.NSEMailEnvelope.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailEnvelope.yml
@@ -267,7 +267,7 @@ items:
   fullName: CRMScript.NetServer.NSEMailEnvelope.SetFlags(Integer)
   type: Method
   summary: "\nFlag status of this mail (unread, replied, deleted )\n"
-  remarks: "\n<p>See enum flags.</p>\n"
+  remarks: "\n<p>See enum</p>\n"
   syntax: 
     content: SetFlags(Integer flags)
     parameters:
@@ -484,3 +484,9 @@ references:
   name: NSEMailAddress
   nameWithType: NSEMailAddress
   fullName: CRMScript.NetServer.NSEMailAddress
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
+  isExternal: true
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
