--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -581,7 +581,7 @@ items:
   fullName: CRMScript.NetServer.NSShipmentMessageEntity.SetFlags(Integer)
   type: Method
   summary: "\nIdentifies if HTML or plain message is included in message.\n"
-  remarks: "\n<p>See enum flags.</p>\n"
+  remarks: "\n<p>See enum</p>\n"
   syntax: 
     content: SetFlags(Integer flags)
     parameters:
@@ -915,3 +915,9 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
+  isExternal: true
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
