--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
@@ -647,7 +647,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.SetFlags(Integer)
   type: Method
   summary: "\nA bitmask of flags.\n"
-  remarks: "\n<p>See enum flags.</p>\n"
+  remarks: "\n<p>See enum</p>\n"
   syntax: 
     content: SetFlags(Integer flags)
     parameters:
@@ -1136,3 +1136,9 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
+- uid: CRMScript.NetServer.ChatSessionFlags
+  commentId: T:CRMScript.NetServer.ChatSessionFlags
+  isExternal: true
+  name: ChatSessionFlags
+  nameWithType: ChatSessionFlags
+  fullName: CRMScript.NetServer.ChatSessionFlags
